Fixed layout issues on about page and removed target blank on index page

--- a/css/main.css
+++ b/css/main.css
@@ -435,7 +435,7 @@ section .hero-area{
   font-size: 1.1em;
   line-height: 1.5em;
 }
-}
+
 aside .form {
   margin-top: 30px;
 }
@@ -500,7 +500,7 @@ input[type=button] {
   background-color: #2a423a;
 }
 .contact-section .content-wrapper{
-  flex-basis: 90%;
+  /* flex-basis: 90%; */
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
@@ -837,15 +837,13 @@ input[type=button] {
     flex-basis: 43%;
   
   }
-  .map figure{
-    /* padding-bottom: 50%;  */
-
-  }
+  
 
   .contact-section {
     flex-flow: row wrap;
   }
   .contact-section .content-wrapper {
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -972,7 +970,7 @@ input[type=button] {
     align-items: center;
   }
   .mission-content {
-  flex-basis: 100%;    
+    width: 80%;   
     align-items: flex-start;
     justify-content: space-evenly;
     padding: 0;
@@ -982,19 +980,17 @@ input[type=button] {
   .mission-content h1 {
     flex-basis: 90%;
   }
-  .map figure {
-    /* padding-bottom: 33%; */
-  }
+  
   .contact-section {
     justify-content: center;
     flex-basis: 100%;
   }
   .contact-section .content-wrapper {
-    justify-content: space-between;
+    width: 80%;
+    margin: 0 auto;
   }
   .contact-section .content-wrapper h2 {
-    margin: 0;
-    flex-basis: 150%;
+    margin: 0 auto;
   }
   .contact-section .content-wrapper h3 {
     padding: 0;
@@ -1002,12 +998,15 @@ input[type=button] {
   }
   .contact-section .content-wrapper address {
     padding-top: 40px;
-    margin: 0;
-    width: 50%;
-    text-align: left;
+    margin: 0 auto;
   }
   .column-one{
-
+    width: 50%;
+    margin: 0 auto;
+  }
+  .column-two{
+    width: 50%;
+    margin: 0 auto;
   }
    /* ==========================================================================
     FAQ Page styles
